[package]
name = "hm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
crossterm = "0.27.0"
notify = "6.1.1"
portable-pty = "0.8.1"
ratatui = "0.26.3"
ratatui-explorer = "0.1.1"
tui-term = "=0.1.11"
